# Wailer

./: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
demo/: manage.py  pyproject.toml
demo/locales/fr/LC_MESSAGES/: django.mo  django.po
demo/my_app/: emails.py  models.py  sms.py  tests.py  views.py
demo/my_app/migrations/: 0001_initial.py  0002_user_phone_number.py
demo/my_app/templates/my_app/wailer/: absolute-url-as.txt  absolute-url-straight.txt  hello.html  hello.mjml  hello.txt  make-absolute.txt  static.html  static.txt  styled-html.html
demo/wailer_demo/: asgi.py  settings.py  urls.py  wsgi.py
doc/: base.txt  requirements.txt
doc/source/: backends.md  conf.py  contributing.md  emails.md  index.rst  installation.md  mjml.md  reference.md  settings.md  sms.md
src/wailer/: apps.py  backends.py  errors.py  interfaces.py  models.py  urls.py  utils.py  views.py
src/wailer/backends/: __init__.py  _utils.py  mailjet.py  mandrill.py
src/wailer/migrations/: 0001_initial.py  0002_alter_sms_sender.py
src/wailer/templates/wailer/: style.html
src/wailer/templatetags/: wailer.py
