[tool.poetry]
name = "wailer"
version = "1.0.0-alpha.1"
description = "A Django emailing utility"
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.8"
Django = "*"
premailer = ">=3"
django-sms = ">=0.5"
django-phonenumber-field = {extras = ["phonenumbers"], version = ">=6"}

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
