[tool.poetry]
name = "wailer_demo"
version = "0.1.0"
description = "A demo Django app using Wailer"
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.8"
wailer = { path = ".." }

[tool.poetry.dev-dependencies]
bpython = "^0.22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
