[tool.poetry]
name = "wailer_demo"
version = "0.1.0"
description = "A demo Django app using Wailer"
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.10"
django-wailer = { path = ".." }
modelw-env-manager = "^1.0.0-alpha.5"

[tool.poetry.dev-dependencies]
bpython = "^0.23"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
